[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/MenuBG.png" type="Texture" id=1]
[ext_resource path="res://Sprites/MenuBGThing.png" type="Texture" id=2]
[ext_resource path="res://pixelfont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackgroundVignette" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -83.0
margin_right = 121.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLabel" type="Label" parent="Menu"]
margin_right = 113.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="OptionsLabel" type="Label" parent="Menu"]
margin_top = 20.0
margin_right = 113.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Options"

[node name="CreditsLabel" type="Label" parent="Menu"]
margin_top = 40.0
margin_right = 113.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Credits"

[node name="ExitLabel" type="Label" parent="Menu"]
margin_top = 60.0
margin_right = 113.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "Exit"

[node name="Fadeout" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
